# region_folding

./: Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json  sample3_one_nested.txt  sample6_no_start.txt  sample_code.txt
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/ops/deref/: trait.Deref.js
docs/implementors/lazy_static/: trait.LazyStatic.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/region_folding/: all.html  fn.enable_ansi_support.html  fn.main.html  index.html  sidebar-items.js
docs/region_folding/region_folding_mod/: enum.FoldKind.html  fn.get_str_to_end_of_line.html  fn.get_vec.html  fn.get_vec_of_fold.html  fn.print_vec.html  index.html  sidebar-items.js  struct.Fold.html  struct.REGEX_ENDREGION.html  struct.REGEX_REGION.html  struct.RegionPos.html
docs/src/region_folding/: main.rs.html  region_folding_mod.rs.html
samples/: sample1_no_regions.txt  sample2_not_nested.txt  sample4_three_nested.txt  sample5_no_ending.txt
src/: main.rs  region_folding_mod.rs
