[package]
name = "region_folding"
version = "2020.507.1558"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "proof of concept for region folding in rust-analyzer and VSCode"
repository = "https://github.com/LucianoBestia/region_folding"
readme = "README.md"
license = "MIT"
keywords = ["rust", "VSCode","rust_analyzer"]
categories = ["development-tools::build-utils"]
publish = false

[dependencies]
unwrap = "1.2.1"
clap = "2.33.0"
ansi_term = "0.12.1"
regex = "1.3.7"
lazy_static="1.4.0"
text-size = "1.0.0"

[badges]
maintenance = { status = "passively-maintained" }
